--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,41 +1,43 @@
 plugins {
-    id 'com.android.application'
-    id 'kotlin-android'
-    id 'kotlin-kapt'
-    id 'kotlin-android-extensions'
-    id 'kotlin-allopen'
+  id 'com.android.application'
+  id 'kotlin-android'
+  id 'kotlin-kapt'
+  id 'kotlin-android-extensions'
+  id 'kotlin-allopen'
 }
 
 android {
-    compileSdkVersion 28
-    defaultConfig {
-        applicationId "com.yoyocoder.android_flexbox_samples"
-        minSdkVersion 23
-        targetSdkVersion 28
-        versionCode 1
-        versionName "1.0"
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+  compileSdkVersion 28
+  defaultConfig {
+    applicationId "com.yoyocoder.android_flexbox_samples"
+    minSdkVersion 23
+    targetSdkVersion 28
+    versionCode 1
+    versionName "1.0"
+    testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+  }
+  buildTypes {
+    release {
+      minifyEnabled false
+      proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
     }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
+  }
 }
 
 dependencies {
-    implementation deps.support.appcompat
-    implementation deps.support.design
-    implementation deps.support.constraintlayout
-    implementation deps.support.flexbox
+  implementation deps.support.appcompat
+  implementation deps.support.design
+  implementation deps.support.constraintlayout
+  implementation deps.support.flexbox
 
-    implementation deps.kotlin.stdlib
+  implementation deps.kotlin.stdlib
 
-    implementation deps.glide.runtime
-    kapt deps.glide.compiler
+  implementation deps.glide.runtime
+  implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
+  implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+  kapt deps.glide.compiler
 
-    testImplementation deps.testing.junit
-    androidTestImplementation deps.testing.test_runner
-    androidTestImplementation deps.testing.espresso_core
+  testImplementation deps.testing.junit
+  androidTestImplementation deps.testing.test_runner
+  androidTestImplementation deps.testing.espresso_core
 }
